plugins {
    id 'java'
    id 'application'
}

group 'com.fuckers.gym'
version '1.0'

sourceCompatibility = 1.8

sourceSets {
    main {
        java {
            srcDir 'src/main'
        }
    }

    test {
        java {
            srcDirs = ['src/main', 'src/test']
        }
    }
}

run {
    mainClassName = 'Index'
    args = ['--add-modules java.se.ee']
}

test {
    useJUnit()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'Index'
        )
    }
}

// -----

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
    testCompile group: 'com.github.javafaker', name: 'javafaker', version: '0.16'
}
